# anything-to-anki

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.worker  Makefile  TASKS.md  ai_proxy.py  conclusions.md  dictionaries~worktree-feat+queue-management  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  improvements.md  pyproject.toml  tasks_cambridge.md  test_prompt.py  vocab-mining-mvp.md  vocabminer.db
backend/: alembic.ini  pyproject.toml  vocabminer.db
backend/src/backend/alembic/: env.py
backend/src/backend/application/: constants.py
backend/src/backend/cli/: build_dict_cache.py
backend/src/backend/domain/: exceptions.py
backend/src/backend/infrastructure/: container.py  logging_setup.py  workers.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_ai_integration.py  test_api_anki.py  test_api_candidates.py  test_api_known_words.py  test_api_queue.py  test_api_settings.py  test_api_sources.py  test_boundary_cleaner_real.py  test_cambridge_jsonl_format.py  test_candidate_sort_order.py  test_cefr_breakdown_db_roundtrip.py  test_cefr_breakdown_pipeline.py  test_cefrpy_cefr_source.py  test_cefrpy_classifier.py  test_efllex_cefr_source.py  test_enrichment_preservation.py  test_full_pipeline.py  test_full_pipeline_marked_fragments.py  test_kelly_cefr_source.py  test_oxford_cefr_source.py  test_phrasal_verb_detection_real_sentences.py  test_pronunciation_pipeline.py  test_regex_lyrics_parser.py  test_regex_text_cleaner.py  test_repositories.py  test_reprocess_source.py  test_slang_normalization_pipeline.py  test_sorting_with_db.py  test_source_repository_update.py  test_spacy_text_analyzer.py  test_sqla_candidate_meaning_repository.py  test_sqla_candidate_media_repository.py  test_sqla_job_repository.py  test_usage_sorting_pipeline.py  test_wordfreq_frequency_provider.py
backend/tests/integration/fixtures/: evil_morty_lyrics.txt  hpmor_excerpt.txt
backend/tests/unit/application/: test_add_manual_candidate.py  test_analyze_text.py  test_anki_template_renderer.py  test_assign_source_collection.py  test_build_bootstrap_index.py  test_cancel_queue.py  test_cefr_breakdown_propagation.py  test_cleanup_media.py  test_cleanup_youtube_video.py  test_create_collection.py  test_create_file_source.py  test_create_source.py  test_create_source_from_url.py  test_create_video_source.py  test_delete_collection.py  test_delete_source.py  test_download_pronunciation.py  test_download_video.py  test_enqueue_meaning_generation.py  test_enqueue_media_generation.py  test_enqueue_pronunciation_download.py  test_enqueue_tts.py  test_generate_meaning.py  test_generate_tts.py  test_get_anki_status.py  test_get_bootstrap_words.py  test_get_candidates.py  test_get_export_cards.py  test_get_media_storage_stats.py  test_get_queue_failed.py  test_get_queue_global_summary.py  test_get_queue_order.py  test_get_reprocess_stats.py  test_get_source_cards.py  test_get_sources.py  test_get_stats.py  test_highlight.py  test_list_collections.py  test_manage_known_words.py  test_manage_settings.py  (+17 more)
backend/tests/unit/cli/: test_build_dict_cache.py
backend/tests/unit/domain/: test_bootstrap_word_selector.py  test_boundary_cleaner.py  test_candidate_filter.py  test_candidate_meaning.py  test_candidate_media.py  test_candidate_pronunciation.py  test_candidate_sorting.py  test_cefr_breakdown.py  test_cefr_level.py  test_cefr_level_resolver.py  test_clause_finder.py  test_content_type_mapping.py  test_enrichment_status.py  test_fragment_extractor.py  test_frequency_band.py  test_known_word_filter.py  test_media_extraction_job.py  test_phrasal_verb_detector.py  test_pos_mapping.py  test_prompts_config.py  test_source_reset.py  test_stored_candidate_properties.py  test_subtitle_value_objects.py  test_usage_distribution.py  test_voting_cefr_classifier.py
backend/tests/unit/infrastructure/: conftest.py  test_anki_connect_connector.py  test_anki_templates_api.py  test_arq_queue_inspector.py  test_cambridge_cefr_source.py  test_cambridge_models.py  test_cambridge_parser.py  test_cambridge_pronunciation_source.py  test_cambridge_sqlite_reader.py  test_cambridge_usage_groups.py  test_cambridge_usage_lookup.py  test_cancellation_token.py  test_claude_ai_service.py  test_dict_cache_adapters.py  test_dict_cache_reader.py  test_enrichment_repo_queue_methods.py  test_job_worker.py  (+19 more)
frontends/cli/: pyproject.toml
(+438 files in other folders)
