[project]
name = "anything-to-anki"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
ai-proxy = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "claude-agent-sdk>=0.1.56",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["cefrpy.*", "wordfreq.*", "claude_agent_sdk.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (may require external services)",
]
addopts = "-v --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM", "TCH"]
