[project]
name = "vocabminer-cli"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "backend",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]

[project.scripts]
vocabminer = "cli.main:main"
